Beginning of ContainerTransport excercise (10-8-2018)

--- a/Algorithm practice/ContainerTransport/ContainerTransport.csproj
+++ b/Algorithm practice/ContainerTransport/ContainerTransport.csproj
@@ -45,11 +45,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Classes\Ship.cs" />
+    <Compile Include="Classes\Container.cs" />
+    <Compile Include="Classes\Service.cs" />
+    <Compile Include="Enums\ContainerType.cs" />
+    <Compile Include="TransportForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="TransportForm.Designer.cs">
+      <DependentUpon>TransportForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,6 +66,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TransportForm.resx">
+      <DependentUpon>TransportForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
