--- a/Algorithm practice/CircusTrain/CircusTrain.csproj
+++ b/Algorithm practice/CircusTrain/CircusTrain.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A72FCF48-06E8-431E-A4CD-6CDDE71B2249}</ProjectGuid>
+    <ProjectGuid>{12BCB933-5C70-40FC-BF9F-F7A476F19C68}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ContainerTransport</RootNamespace>
-    <AssemblyName>ContainerTransport</AssemblyName>
+    <RootNamespace>CircusTrain</RootNamespace>
+    <AssemblyName>CircusTrain</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,21 +45,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Layer.cs" />
-    <Compile Include="Classes\Row.cs" />
-    <Compile Include="Classes\Ship.cs" />
-    <Compile Include="Classes\Container.cs" />
-    <Compile Include="Classes\Service.cs" />
-    <Compile Include="Classes\Stack.cs" />
-    <Compile Include="Enums\ContainerType.cs" />
-    <Compile Include="TransportForm.cs">
+    <Compile Include="Animal.cs" />
+    <Compile Include="Enums\Diet.cs" />
+    <Compile Include="Enums\Magnitude.cs" />
+    <Compile Include="Services.cs" />
+    <Compile Include="Train.cs" />
+    <Compile Include="TrainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TransportForm.Designer.cs">
-      <DependentUpon>TransportForm.cs</DependentUpon>
+    <Compile Include="TrainForm.Designer.cs">
+      <DependentUpon>TrainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wagon.cs" />
+    <EmbeddedResource Include="TrainForm.resx">
+      <DependentUpon>TrainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -69,9 +71,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="TransportForm.resx">
-      <DependentUpon>TransportForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
