--- a/Algorithm practice/CircusTrain/CircusTrain.csproj
+++ b/Algorithm practice/CircusTrain/CircusTrain.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
+    <Compile Include="Creator.cs" />
     <Compile Include="Enums\Diet.cs" />
     <Compile Include="Enums\Magnitude.cs" />
     <Compile Include="Services.cs" />
