--- a/Algorithm practice/ContainerTransport/ContainerTransport.csproj
+++ b/Algorithm practice/ContainerTransport/ContainerTransport.csproj
@@ -48,13 +48,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Factory.cs" />
-    <Compile Include="Classes\Layer.cs" />
+    <Compile Include="Classes\Placer.cs" />
     <Compile Include="Classes\Row.cs" />
     <Compile Include="Classes\Ship.cs" />
     <Compile Include="Classes\Container.cs" />
-    <Compile Include="Classes\Service.cs" />
+    <Compile Include="Classes\RowService.cs" />
     <Compile Include="Classes\Stack.cs" />
-    <Compile Include="Enums\ContainerType.cs" />
+    <Compile Include="Classes\StackService.cs" />
+    <Compile Include="Enums\Type.cs" />
+    <Compile Include="Enums\Place.cs" />
     <Compile Include="TransportForm.cs">
       <SubType>Form</SubType>
     </Compile>
